<resources>
    <string name="app_name">RamenPos</string>
    <string name="pos_id">Pos Id</string>
    <string name="serial_number">Serial Number</string>
    <string name="address">Address</string>
    <string name="test_mode">Test Mode</string>
    <string name="auto">Auto</string>
    <string name="n_a">N/A</string>
    <string name="terminal_model">Terminal Model</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="plugin_version">Plugin Version</string>
    <string name="payment_interface_version">Payment Interface Version</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="comms_selected">Comms Selected</string>
    <string name="pa_version">PA Version</string>
    <string name="eftpos_configuration">Eftpos Configuration</string>
    <string name="status">Status</string>
    <string name="eftpos_info">Eftpos Info</string>
    <string name="not_connected">Not Connected</string>
    <string name="pair">Pair</string>
    <string name="flow">Flow</string>
    <string name="idle">Idle</string>
    <string name="ramen_image">Ramen image</string>
    <string name="retrieve">Retrieve</string>
    <string name="eftpos_status">Eftpos Status</string>
    <string name="pos_vendor_key">Pos Vendor Key</string>
    <string name="header">Header</string>
    <string name="print_text">Print Text</string>
    <string name="reference">Reference</string>
    <string name="cashout">Cashout</string>
    <string name="last_trans">Last Trans</string>
    <string name="recovery">Recovery</string>
    <string name="print">Print</string>
    <string name="settle_enq">Settle Enq</string>
    <string name="settle">Settle</string>
    <string name="purchase">Purchase</string>
    <string name="refund">Refund</string>
    <string name="moto">MOTO</string>
    <string name="none">None</string>
    <string name="extra">Extra</string>
    <string name="amount">Amount</string>
    <string name="receipt_header_and_footer">Receipt Header And Footer</string>
    <string name="print_merchant_copy">Print Merchant Copy</string>
    <string name="suppress_merchant_password">Suppress Merchant Password</string>
    <string name="eftpos_settings">Eftpos Settings</string>
    <string name="transactional_values">Transactional Values</string>
    <string name="charging">Charging</string>
    <string name="terminal_status">Terminal Status</string>
    <string name="receipt_from_eftpos">Receipt from EFTPOS</string>
    <string name="signature_from_eftpos">Signature from EFTPOS</string>
    <string name="battery_level">Battery Level</string>
    <string name="tip">Tip</string>
    <string name="surcharge">Surcharge</string>
    <string name="other_actions">Other Actions</string>
    <string name="transactional_actions">Transactional Actions</string>
    <string name="set">Set</string>
    <string name="eftpos_printing">Eftpos Printing</string>
    <string name="log">Log</string>
    <string name="footer">Footer</string>
    <string name="ramenpos1">RAMENPOS1</string>
    <string name="connection">Connection</string>
    <string name="_127_0_0_1">127.0.0.1</string>
    <string name="_123_456_789">123-456-789</string>
    <string name="auto_ip_resolution">Auto Ip Resolution</string>
    <string name="save">Save</string>
    <string name="pair_with_eftpos">Pair With Eftpos</string>
    <string name="unpair">Unpair</string>
    <string name="cancel_pairing">Cancel Pairing</string>
    <string name="transactions">Transactions</string>
    <string name="main">Main</string>
</resources>
