<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connection">

    <TextView
        android:id="@+id/lblConnection"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="288dp"
        android:background="#AFBBC4"
        android:text="   Connection"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="152dp"
        android:background="#AFBBC4"
        android:text="   Auto Ip Resolution"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="188dp"
        android:text="@string/test_mode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/auto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTestMode" />

    <TextView
        android:id="@+id/lblEftposSettings"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="#AFBBC4"
        android:text="   Eftpos Settings"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="127.0.0.1"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblAddress"
        app:layout_constraintTop_toBottomOf="@+id/edtSerialNum"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lblPosId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/pos_id"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPosId"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="RAMENPOS1"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblPosId"
        app:layout_constraintTop_toBottomOf="@+id/lblEftposSettings"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lblSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/serial_number"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPosId" />

    <EditText
        android:id="@+id/edtSerialNum"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="123-456-789"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblSerialNumber"
        app:layout_constraintTop_toBottomOf="@+id/edtPosId"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSerialNumber" />

    <TextView
        android:id="@+id/lblAutoIpResolution"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="152dp"
        android:background="#AFBBC4"
        android:text="   Auto Ip Resolution"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swtTestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblTestMode"
        app:layout_constraintTop_toBottomOf="@+id/lblAutoIpResolution" />

    <Switch
        android:id="@+id/swtAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblAuto"
        app:layout_constraintTop_toBottomOf="@+id/swtTestMode" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtAuto" />

    <Button
        android:id="@+id/btnPair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:text="Pair With Eftpos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblConnection" />

    <Button
        android:id="@+id/btnUnpair"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:text="Unpair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPair" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:text="Cancel Pairing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnpair" />

</android.support.constraint.ConstraintLayout>